2002-06-02  Markus Gutschke  <markus+wy60@wy60.gutschke.com>

	* Added optional support for job control. If the calling process
	enabled job control, then wy60 can pass this capability through to
	its children.

	* The code is now sufficiently feature rich to warrant upgrading
	the version number to 2.0.

2002-05-31  Markus Gutschke  <markus+wy60@wy60.gutschke.com>

	* wy60 now attempts to correctly implement protected mode. Since I
	don't have a hardware Wyse 60 terminal, and I don't have full
	specs, I am not sure if I got all the corner cases right.

	* Do not reset the terminal at startup, initializing it is
	sufficient and seems to be less disruptive for most terminfo
	entries.

	* The attributes for protected mode weren't always initialized
	correctly.

2002-05-26  Markus Gutschke  <markus+wy60@wy60.gutschke.com>

	* A lot more compatibility tweaks. The code is now more friendly
	to systems that have restrictive C compilers (i.e. pre C99),
	run-time libraries limited in functionality, or require System V
	streams.

	* User input uses buffered I/O now. This improves performance over
	high-latency network connections.

2002-05-21  Markus Gutschke  <markus+wy60@wy60.gutschke.com>

	* Assorted performance improvements in dealing with the internal
	screen buffers.

	* Fixed a couple of minor redraw problems introduced with the
	screen buffers.

	* Do not clear old contents in buffers if the screen size has
	shrunk, unless there has also been a scrolling operation.

	* When requesting a change in screen size, wait for the terminal
	to adjust before continuing (or time out after about 1s).

2002-05-19  Markus Gutschke  <markus+wy60@wy60.gutschke.com>

	* Major change in the way how characters are output. Wy60 now
	maintains internal buffers that mirror what is shown on the
	screen. This is the neccessary framework to add full support for
	protected mode. Protected mode itself has not been implemented,
	yet.
